--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
             team goal of suppressing all fires as quickly as possible
             and the individual robot goals, which aim to maximize the
             amount of fire each robot suppresses. To explicitly address
-            this, we propose \textit{Objective Harmonization Curriculum
-            for Fire Suppression} (OHCF), a method that integrates
+	    this, we propose <i>Objective Harmonization Curriculum
+		    for Fire Suppression</i> (OHCF), a method that integrates
             curriculum learning with multi-agent reinforcement learning
             (MARL). We design a novel three-stage curriculum that
             guides the learning process by initially prioritizing
